Updated my-profile page - some refactoring & fixed buggy behavior on mobile ...
- in mobile the cursor was placed to the end while typing

--- a/src/sass/pages/_my-profile.scss
+++ b/src/sass/pages/_my-profile.scss
@@ -177,8 +177,6 @@
     }
 
     .mat-error {
-      margin-left: 10px;
-      margin-right: 10px;
       font-size: .7rem;
     }
 
